@@ -1,3 +1,8 @@
+2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/base/src/calDavCalendar.js (safeRefresh): fixed
+	issues with unavailable calendars. (#502014)
+
 2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/base/src/calIcsParser.js: added a new
